Add new HTML pages, update styles, and include scripts for improved functionality

--- a/styles/main.css
+++ b/styles/main.css
@@ -67,7 +67,7 @@
 
 html {
   color: #4b4b4b;
-  font-family: "Marcellus", "Noto Serif JP", serif;
+  font-family: "Ysabeau", "Noto Serif JP", sans-serif;
   font-style: normal;
 }
 
@@ -462,7 +462,7 @@ header #mask.active {
 
 html {
   color: #4b4b4b;
-  font-family: "Marcellus", "Noto Serif JP", serif;
+  font-family: "Ysabeau", "Noto Serif JP", sans-serif;
   font-style: normal;
 }
 
@@ -611,7 +611,7 @@ footer .copyright {
 
 html {
   color: #4b4b4b;
-  font-family: "Marcellus", "Noto Serif JP", serif;
+  font-family: "Ysabeau", "Noto Serif JP", sans-serif;
   font-style: normal;
 }
 
@@ -788,7 +788,7 @@ html {
 
 html {
   color: #4b4b4b;
-  font-family: "Marcellus", "Noto Serif JP", serif;
+  font-family: "Ysabeau", "Noto Serif JP", sans-serif;
   font-style: normal;
 }
 
@@ -977,7 +977,7 @@ html {
 
 html {
   color: #4b4b4b;
-  font-family: "Marcellus", "Noto Serif JP", serif;
+  font-family: "Ysabeau", "Noto Serif JP", sans-serif;
   font-style: normal;
 }
 
@@ -1201,7 +1201,7 @@ html {
 
 html {
   color: #4b4b4b;
-  font-family: "Marcellus", "Noto Serif JP", serif;
+  font-family: "Ysabeau", "Noto Serif JP", sans-serif;
   font-style: normal;
 }
 
@@ -1623,7 +1623,7 @@ html {
 
 html {
   color: #4b4b4b;
-  font-family: "Marcellus", "Noto Serif JP", serif;
+  font-family: "Ysabeau", "Noto Serif JP", sans-serif;
   font-style: normal;
 }
 
