--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,454 +1,9 @@
-$headerHeight: 8vh;
-$HumbergerMenuWidth: 35vw;
-$HumbergerMenuHeight: 100vh - $headerHeight;
-$cWhite: #ffffff;
-$cGray: #4b4b4b;
-$cLightGray: #d3d3d3;
-$cBlack: #000000;
+@import "unit/header";
+@import "unit/footer";
+// @use "unit/baseDefault";
 
-@keyframes animation-categoryOpen {
-  0% {
-    transform: translateX(-$HumbergerMenuWidth);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes animation-categoryClose {
-  0% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateX(-$HumbergerMenuWidth);
-    opacity: 0;
-  }
-}
-
-/* 右向き ▶︎ */
-.triangle {
-  // position: absolute;
-  background-color: #4b4b4b;
-  // display: inline-block;
-  height: calc(16px / 2 * tan(60deg));
-  width: 8px;
-  clip-path: polygon(0 0, 100% 50%, 0 100%);
-  transition: all 0.6s;
-}
-
-html {
-  color: $cGray;
-  font-family: "Marcellus", "Noto Serif JP", serif;
-}
-
-// a {
-//   display: inline-block;
-// }
-
-.logoText {
-  font-size: 2vh;
-  font-weight: 500;
-}
-
-header {
-  height: $headerHeight;
-  background-color: $cWhite;
-  width: 100vw;
-  padding: 15px 15px;
-  margin: 0 auto;
-  position: fixed;
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 1000;
-
-  // .logo {
-  //   position: absolute;
-  //   left: 50%;
-  //   transform: translateX(-50%);
-  // }
-
-  .toggle-btn {
-    display: block;
-    margin: 0;
-    cursor: pointer;
-
-    & span {
-      transition: all 0.7s ease-in;
-
-      display: block;
-      height: 2px;
-      width: 30px;
-      background-color: $cBlack;
-      margin-bottom: 6px;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    &.active {
-      margin-bottom: 0px;
-      > span {
-        &:nth-child(1) {
-          transform: translateX(10px) rotate(-135deg) translateY(-12px);
-        }
-        &:nth-child(2) {
-          width: 0;
-        }
-        &:nth-child(3) {
-          transform: translateX(10px) rotate(135deg) translateY(12px);
-        }
-      }
-    }
-  }
-
-  #baseMenu {
-    // display: flex;
-    // ul {
-    //   display: flex;
-    // }
-    .base {
-      display: none;
-    }
-  }
-
-  nav {
-    z-index: 100;
-    position: absolute;
-    top: $headerHeight;
-    left: 0;
-    transform: translateX(-100%);
-    transition: all 0.7s;
-
-    font-weight: 400;
-
-    background-color: $cWhite;
-    border-top: solid 1px $cGray;
-
-    padding: 20px 20px;
-    width: $HumbergerMenuWidth;
-    height: $HumbergerMenuHeight;
-
-    &.active {
-      transform: translateX(0);
-    }
-
-    > .navLinks {
-      display: flex;
-      flex-direction: column;
-      height: 25vh;
-      justify-content: space-between;
-      > li {
-        padding: 10px 0;
-
-        .navLinks-category {
-          cursor: pointer;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-
-          .triangle {
-            position: absolute;
-            right: 10%;
-
-            &.category-open {
-              transform: rotateY(180deg);
-            }
-          }
-        }
-      }
-    }
-
-    .navFooter {
-      width: $HumbergerMenuWidth;
-      height: 20vh;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-
-      ul {
-        display: flex;
-        flex-direction: row;
-
-        justify-content: space-around;
-        align-items: center;
-      }
-
-      #i18 {
-        display: flex;
-        width: 80%;
-        justify-content: space-around;
-        margin: 0 auto;
-        margin-top: 30px;
-      }
-    }
-
-    .product-open {
-      display: none;
-      &.category-open {
-        padding: 10px;
-        // display: flex;
-        display: block;
-        // justify-content: space-between;
-        position: absolute;
-        top: 0;
-        animation-name: animation-categoryOpen;
-        animation-duration: 0.6s;
-
-        left: $HumbergerMenuWidth;
-        width: (100vw - $HumbergerMenuWidth);
-        height: 100vh;
-        background-color: $cWhite;
-        border-left: solid 1px rgba($color: $cGray, $alpha: 0.8);
-      }
-      .itemSearchBox{
-        width: 100%;
-        border: solid 1px $cBlack;
-        border-radius: 3px;
-
-        input{
-          width: 80%;
-          padding: 5px;
-          
-        }
-
-      }
-      #appsItemCategoryTag {
-        // display: none;
-
-        // &.category-open {
-          // padding: 15px;
-          display: flex;
-          justify-content: space-between;
-          height: 80vh;
-          text-align: start;
-          margin-top: 20px;
-          // position: absolute;
-          // top: 0;
-          // animation-name: animation-categoryOpen;
-          // animation-duration: 0.6s;
-
-          // left: $HumbergerMenuWidth;
-          // width: (100vw - $HumbergerMenuWidth);
-          // background-color: $cWhite;
-          // border-left: solid 1px rgba($color: $cGray, $alpha: 0.8);
-        // }
-
-        .appsItemCategoryTag_child {
-          // padding: 10px;
-          width: 50%;
-          margin: 0 auto;
-          height: $HumbergerMenuHeight * 2;
-
-          .mainHeaderNavColor {
-            display: inline-block;
-          }
-
-          &.close {
-            display: none;
-            width: 0;
-            > a {
-              border: none;
-              left: 0;
-              position: absolute;
-            }
-          }
-
-          .appsItemCategoryTag_lowerchild {
-            // width: 100%;
-            // display: flex;
-            // text-align: center;
-            flex-direction: column;
-            font-size: small;
-            margin: 0 auto;
-            // width: (85vw - $HumbergerMenuWidth);
-            justify-content: space-around;
-            margin-top: 15px;
-            overflow-y: auto;
-            -webkit-overflow-scrolling: touch;
-            scrollbar-gutter: auto;
-            max-height: 70vh;
-
-            overflow-x: hidden;
-            &::-webkit-scrollbar {
-              width: 5px;
-              // margin-left: 5px;
-            }
-            &::-webkit-scrollbar-track {
-              background: rgba($cGray, 0.1);
-            }
-            &::-webkit-scrollbar-thumb {
-              background: rgba($cGray, 0.3);
-              border-radius: 10px;
-            }
-            &.close {
-              display: none;
-              width: 0;
-            }
-
-            a {
-              margin: 10px 5px;
-            }
-          }
-        }
-      }
-    }
-
-  }
-
-  #mask {
-    z-index: 20;
-    width: 100vw;
-    right: 0;
-    transform: translateX(100%);
-    height: $HumbergerMenuHeight;
-    position: absolute;
-    top: $headerHeight;
-    background-color: rgba($color: $cBlack, $alpha: 0.8);
-    opacity: 0;
-    transition: all 0.7s ease;
-
-    &.active {
-      display: block;
-      opacity: 1;
-      transform: translateX(0);
-      left: $HumbergerMenuWidth;
-    }
-  }
-}
-
-footer {
-  background-color: $cWhite;
-  font-size: small;
-  display: flex;
-  flex-direction: column;
-  justify-content: baseline;
-  align-items: center;
-  width: 100vw;
-  margin-top: 20px;
-  padding: 15px;
-  height: 2vh;
-  // margin: 0 auto;
-  // position: absolute;
-  // bottom: 0;
-  ul {
-    width: 70%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    li {
-      padding: 5px 0;
-    }
-  }
-}
-
-#page {
-  // position: absolute;
-  // padding: 10vh 0;
-  width: 90%;
-  // height: 60vh;
-  margin: 0 auto;
-  padding-top: $headerHeight;
-}
-
-.indexPage {
-  margin-top: $headerHeight;
-  text-align: center;
-  height: 80vh;
-  overflow: hidden;
-  // width :80%;
-  // margin: 0 auto;
-  padding: 50px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .container {
-    margin: 0 auto;
-    width: 75%;
-    padding-top: 130%;
-    position: relative;
-
-    img {
-      position: absolute;
-      top: 0;
-      // transform: translateY(-50%);
-      left: 0;
-      width: 100%;
-      height: 100%;
-      // max-height: 800px;
-
-      object-fit: cover;
-      z-index: -30;
-    }
-  }
-}
-
-.breadcrumb-container {
-  width: 100% !important;
-  color: $cBlack;
-
-  .breadcrumb {
-    width: 100%;
-    background-color: $cWhite;
-    display: flex;
-
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 0 auto;
-    position: fixed;
-    font-size: 0.8rem;
-
-    align-items: baseline;
-    li {
-      display: block;
-      border-bottom: solid 1px $cBlack;
-      margin: 10px;
-    }
-  }
-}
-
-.categoryPage {
-  // height: 1000px;
-  text-align: center;
-
-  .childCategoryList01 {
-    // width: 80%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 40px auto;
-
-    > li {
-      // width: 20%;
-      padding: 10px;
-      display: block;
-    }
-  }
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-
-    li {
-      display: block;
-      margin-top: 20px;
-      padding: 10px;
-    }
-  }
-}
-
-.itemPage {
-  text-align: center;
-
-  .item .clearfix {
-    display: none;
-  }
-}
+@import "content/base";
+@import "content/indexPage";
+@import "content/categoryPage";
+@import "content/itemPage";
+@import "content/aboutPage";
