--- a/styles/unit/_header.scss
+++ b/styles/unit/_header.scss
@@ -2,7 +2,7 @@
 
 header {
     height: $headerHeight;
-    background-color: $cWhite;
+    background-color: $cBackground;
     width: 100%;
     padding: 0px 7.25vw;
     position: fixed;
@@ -75,9 +75,9 @@ header {
         left: 0;
         transform: translateX(-100%);
         transition: all 0.7s;
-        background-color: $cWhite;
+        background-color: $cBackground;
         border-top: solid 1px rgba($color: $cGray, $alpha: 0.6);
-        padding: 40px 15px 150px;
+        padding: 20px 15px 120px;
         width: $HamburgerMenuWidth;
         height: calc(100vh - #{$headerHeight});
 
@@ -92,7 +92,7 @@ header {
         .navLinks {
             display: flex;
             flex-direction: column;
-            height: 30vh;
+            height: 40vh;
             justify-content: space-between;
             // position: relative;
 
@@ -104,6 +104,7 @@ header {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    @include fontSmall;
 
                     .triangle {
                         position: absolute;
@@ -130,7 +131,7 @@ header {
                             height: calc(100vh - #{$headerHeight});
                             width: 100vw - $HamburgerMenuWidth;
                             padding: 40px 30px 150px;
-                            background-color: $cWhite;
+                            background-color: $cBackground;
                             border-left: solid 1px
                                 rgba($color: $cGray, $alpha: 0.6);
 
@@ -246,7 +247,7 @@ header {
 }
 
 .PC-header {
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
