--- a/styles/variables/_variables.scss
+++ b/styles/variables/_variables.scss
@@ -4,11 +4,11 @@ $HamburgerMenuWidth: 40vw;
 $HamburgerMenuHeight: calc(100vh - #{$headerHeight});
 $footerHeight: 1vh;
 $cWhite: #ffffff;
-$cGray: #4b4b4b;
+$cGray: #505050;
 $cLightGray: #d3d3d3;
 $cBlack: #000000;
 $announceBarHeight: 0;
-
+$cBackground: #f5f4f2;
 @mixin fontNormal {
     font-size: 100%;
     font-weight: 200;
@@ -16,22 +16,49 @@ $announceBarHeight: 0;
 
 @mixin mainTitle {
     font-size: 130%;
-    font-weight: 400;
-}
-
-@mixin subTitle {
-    font-size: 115%;
-    font-weight: 400;
-}
-
-@mixin fontSmall {
-    font-size: 85%;
     font-weight: 200;
 }
 
+@mixin subTitle {
+    font-size: 110% !important;
+    font-weight: 200 !important;
+}
+
+@mixin fontSmall {
+    font-size: 90% !important;
+    font-weight: 200 !important;
+}
+
 @mixin fontSmaller {
-    font-size: 75%;
-    font-weight: 100;
+    font-size: 70% !important;
+    font-weight: 100 !important;
+}
+
+@media screen and (max-width: 900px) {
+    @mixin fontNormal {
+        font-size: 120% !important;
+        font-weight: 300 !important;
+    }
+
+    @mixin mainTitle {
+        font-size: 150% !important;
+        font-weight: 300 !important;
+    }
+
+    @mixin subTitle {
+        font-size: 110% !important;
+        font-weight: 300 !important;
+    }
+
+    @mixin fontSmall {
+        font-size: 90% !important;
+        font-weight: 200 !important;
+    }
+
+    @mixin fontSmaller {
+        font-size: 70% !important;
+        font-weight: 100 !important;
+    }
 }
 
 * {
@@ -39,23 +66,11 @@ $announceBarHeight: 0;
 }
 
 .mainTitle {
-    font-size: 1.12rem !important;
-    font-weight: 300 !important;
+    @include mainTitle;
 }
 
 .subTitle {
-    font-size: 1.08rem !important;
-    font-weight: 300 !important;
-}
-
-.fontSmall {
-    font-size: 0.95rem !important;
-    font-weight: 200 !important;
-}
-
-.fontSmaller {
-    font-size: 0.8rem !important;
-    font-weight: 100 !important;
+    @include subTitle;
 }
 
 @keyframes slideIn {
@@ -98,18 +113,18 @@ $announceBarHeight: 0;
 /* 右向き ▶︎ */
 .triangle {
     background-color: $cGray;
-    height: calc(16px / 2 * tan(60deg));
-    width: 8px;
+    height: calc(6px / 2 * tan(60deg));
+    width: 3px;
     clip-path: polygon(0 0, 100% 50%, 0 100%);
     transition: transform 0.6s ease, opacity 0.6s ease;
 }
 
 html {
     color: $cGray;
-    font-family: "Ysabeau", "Noto Serif JP", sans-serif;
-    // font-family: "Noto Sans JP", "Montserrat", serif;
-    // font-family: "Noto Serif JP", "Montserrat", serif;
     font-style: normal;
+    font-family: "Roboto Slab", "Noto Serif JP", monospace, serif !important;
+    font-optical-sizing: auto;
+    background-color: $cBackground !important;
 }
 
 .logoText {
@@ -123,6 +138,7 @@ html {
     margin-top: $headerHeight;
     min-height: 75vh;
     overflow-x: hidden;
+    background-color: $cBackground !important;
 }
 
 .informationBanner {
@@ -138,8 +154,9 @@ html {
             display: flex !important;
             flex-direction: row !important;
             height: 30px !important;
-            width: 80% !important;
+            width: 100% !important;
             margin: 0 auto !important;
+            background-color: $cWhite;
         }
         &__field {
             width: 80% !important;
@@ -161,7 +178,7 @@ html {
             border: solid 1px rgba(191, 191, 191, 0.3) !important;
             border-radius: 0 3px 3px 0;
             text-align: center !important;
-            background-color: rgba(191, 191, 191, 0.3);
+            background-color: rgb(224, 224, 224);
             //     transition: opacity 0.6s ease;
 
             &:hover {
@@ -173,4 +190,7 @@ html {
             }
         }
     }
+}
+#mainContaint {
+    background-color: $cBackground !important;
 }
