--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,3 +7,5 @@
 @import "content/categoryPage";
 @import "content/itemPage";
 @import "content/aboutPage";
+@import "content/contactPage";
+@import "content/membershipPage";
