--- a/styles/unit/_footer.scss
+++ b/styles/unit/_footer.scss
@@ -8,8 +8,9 @@ footer {
     flex-direction: column;
     justify-content: baseline;
     align-items: center;
-    width: 100vw;
+    // width: 100vw;
     padding: 5px;
+    padding-bottom: 80px;
     // height: $footerHeight;
 
     ul {
