--- a/styles/content/_aboutPage.scss
+++ b/styles/content/_aboutPage.scss
@@ -26,7 +26,7 @@
     .concept {
         width: 95%;
         margin: 0 auto;
-        margin-top: 60px;
+        margin-top: $marginLg;
         display: flex;
         flex-direction: column;
         align-items: center;
