--- a/styles/content/_categoryPage.scss
+++ b/styles/content/_categoryPage.scss
@@ -13,7 +13,7 @@
 
         p {
             margin: 30px 0;
-            border-bottom: solid $cLightGray 1px;
+            // border-bottom: solid $cLightGray 1px;
         }
     }
 
