--- a/styles/unit/_header.scss
+++ b/styles/unit/_header.scss
@@ -77,7 +77,7 @@ header {
         transition: all 0.7s;
         background-color: $cBackground;
         border-top: solid 1px rgba($color: $cGray, $alpha: 0.6);
-        padding: 20px 15px 120px;
+        padding: 3vw 5vw 90px;
         width: $HamburgerMenuWidth;
         height: calc(100vh - #{$headerHeight});
 
@@ -109,11 +109,7 @@ header {
                     .triangle {
                         position: absolute;
                         right: 10%;
-                        background-color: $cGray;
-                        height: calc(16px / 2 * tan(60deg));
-                        width: 8px;
-                        clip-path: polygon(0 0, 100% 50%, 0 100%);
-                        transition: all 0.6s;
+                        // background-color: $cGray;
 
                         &.category-open {
                             transform: rotateY(180deg);
@@ -189,6 +185,8 @@ header {
                 margin-top: 20px;
 
                 select {
+                    background-color: $cBackground !important;
+
                     border: solid 1px rgba($cGray, 0.3);
                     width: 80%;
                     border-radius: 4px;
