--- a/styles/variables/_variables.scss
+++ b/styles/variables/_variables.scss
@@ -1,6 +1,6 @@
 $headerHeight: 60px;
 $breadcrumbHeight: 3vh;
-$HamburgerMenuWidth: 40vw;
+$HamburgerMenuWidth: 45vw;
 $HamburgerMenuHeight: calc(100vh - #{$headerHeight});
 $footerHeight: 1vh;
 $cWhite: #ffffff;
@@ -9,6 +9,12 @@ $cLightGray: #d3d3d3;
 $cBlack: #000000;
 $announceBarHeight: 0;
 $cBackground: #f5f4f2;
+$cRed: #ff0000;
+
+$marginLg: 5vh;
+$marginMd: 3vh;
+$marginSm: 1vh;
+
 @mixin fontNormal {
     font-size: 100%;
     font-weight: 200;
@@ -113,8 +119,8 @@ $cBackground: #f5f4f2;
 /* 右向き ▶︎ */
 .triangle {
     background-color: $cGray;
-    height: calc(6px / 2 * tan(60deg));
-    width: 3px;
+    height: calc(10px / 2 * tan(60deg));
+    width: 5px;
     clip-path: polygon(0 0, 100% 50%, 0 100%);
     transition: transform 0.6s ease, opacity 0.6s ease;
 }
@@ -150,39 +156,34 @@ html {
     // margin-top: 30px;
 
     .itemSearch {
+        width: 90%;
+        margin: 0 auto;
+        border: none !important;
+        border-bottom: solid 1px rgba(191, 191, 191, 0.6) !important;
+
         &__form {
             display: flex !important;
             flex-direction: row !important;
             height: 30px !important;
             width: 100% !important;
             margin: 0 auto !important;
-            background-color: $cWhite;
+            background-color: $cBackground;
         }
         &__field {
             width: 80% !important;
-            border: solid 1px rgba(191, 191, 191, 0.6) !important;
-            border-radius: 3px 0 0 3px !important;
             height: 30px !important;
-
-            border-right: none !important;
+            // border: none !important;
             padding: 7px !important;
-
-            // :focus-visible {
-            //     outline: solid 1px rgba(191, 191, 191, 1);
-            // }
+            background-color: $cBackground;
         }
 
         &__btn {
             width: 20% !important;
-            //     margin: 0;
-            border: solid 1px rgba(191, 191, 191, 0.3) !important;
-            border-radius: 0 3px 3px 0;
-            text-align: center !important;
-            background-color: rgb(224, 224, 224);
-            //     transition: opacity 0.6s ease;
+            text-align: center;
+            transition: all 0.6s ease;
 
             &:hover {
-                opacity: 0.6 !important;
+                transform: scale(1.1);
             }
             img {
                 width: 20px !important;
