--- a/styles/main.css
+++ b/styles/main.css
@@ -101,8 +101,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -128,7 +134,7 @@ header {
   height: 60px;
   background-color: #f5f4f2;
   width: 100%;
-  padding: 0px 7.25vw;
+  padding: 0px 5cqmax;
   position: fixed;
   top: 0;
   left: 0;
@@ -140,8 +146,8 @@ header {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 header img {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
 }
 header .logo img {
   height: 50px;
@@ -184,7 +190,7 @@ header nav {
   border-top: solid 1px rgba(80, 80, 80, 0.6);
   padding: 3vw 5vw 90px;
   width: 45vw;
-  height: calc(100vh - 60px);
+  height: calc(100svh - 60px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -224,7 +230,7 @@ header nav .navLinks li .navLinks-category__medium.category-open {
   position: absolute;
   top: 0;
   left: 45vw;
-  height: calc(100vh - 60px);
+  height: calc(100svh - 60px);
   width: 55vw;
   padding: 40px 30px 150px;
   background-color: #f5f4f2;
@@ -246,7 +252,7 @@ header nav .navLinks li .navLinks-category__medium.category-open::-webkit-scroll
 header nav .navFooter {
   display: flex;
   flex-direction: column;
-  height: 15vh;
+  height: 15svh;
   justify-content: space-between;
   width: 100%;
 }
@@ -494,8 +500,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -645,8 +657,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -712,14 +730,14 @@ html {
   text-align: start;
 }
 .productList__text h2 {
-  font-size: 90% !important;
-  font-weight: 200 !important;
+  font-size: 80% !important;
+  font-weight: 100 !important;
   line-height: 1.5;
 }
 .productList__text p {
   text-align: end;
-  font-size: 90% !important;
-  font-weight: 200 !important;
+  font-size: 80% !important;
+  font-weight: 100 !important;
 }
 .productList__text:hover {
   opacity: 1;
@@ -729,6 +747,21 @@ html {
 }
 .productList__text.soldOut p {
   text-align: center;
+}
+@media (min-width: 768px) {
+  .productList li {
+    width: 33.33%;
+  }
+}
+@media screen and (min-width: 960px) {
+  .productList__item {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 1921px) {
+  .productList li {
+    width: 25%;
+  }
 }
 
 * {
@@ -833,8 +866,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -1023,8 +1062,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -1077,7 +1122,7 @@ html {
   gap: 10px;
 }
 .categoryPage .breadcrumb-container .breadcrumb li {
-  font-size: 70% !important;
+  font-size: 80% !important;
   font-weight: 100 !important;
   display: flex;
   align-items: center;
@@ -1129,18 +1174,12 @@ html {
     width: 50%;
     text-align: center;
   }
-  .categoryPage .productList li {
-    width: 33.33%;
-  }
 }
 @media screen and (min-width: 960px) {
   .categoryPage .childCategoryList01 {
     width: 90%;
   }
   .categoryPage .childCategoryList01 li {
-    width: 25%;
-  }
-  .categoryPage .productList li {
     width: 25%;
   }
 }
@@ -1247,8 +1286,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -1329,14 +1374,14 @@ html {
   height: 100%;
 }
 .itemPage .swiper-container .mySwiper {
-  padding: 10px;
+  padding: 10px 0;
   position: relative;
 }
 .itemPage .swiper-container .mySwiper .swiper-slide {
   opacity: 0.4;
 }
 .itemPage .swiper-container .mySwiper .swiper-slide img {
-  width: 100%;
+  aspect-ratio: 2/3;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -1360,11 +1405,11 @@ html {
   margin: 0 auto;
 }
 .itemPage .purchase label {
-  font-size: 70% !important;
+  font-size: 80% !important;
   font-weight: 100 !important;
 }
 .itemPage .purchase select {
-  font-size: 70% !important;
+  font-size: 80% !important;
   font-weight: 100 !important;
   display: inline-block;
   padding: 3px 10px;
@@ -1409,13 +1454,13 @@ html {
   padding: 10px;
 }
 .itemPage #itemAttention .postageOpen {
-  font-size: 70% !important;
+  font-size: 80% !important;
   font-weight: 100 !important;
 }
 .itemPage #itemAttention p {
   margin: 10px 0;
   text-align: left;
-  font-size: 70% !important;
+  font-size: 80% !important;
   font-weight: 100 !important;
 }
 .itemPage #itemAttention .membershipPoint p {
@@ -1462,7 +1507,7 @@ html {
 .itemPage #appsItemDetailCustom p {
   font-size: 100%;
   font-weight: 200;
-  line-height: 150%;
+  line-height: 1.5 !important;
   text-align: left;
   margin-bottom: 70px;
 }
@@ -1685,8 +1730,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -1821,7 +1872,7 @@ html {
   margin-bottom: 0;
 }
 .aboutPage .shopList ul li .shopInfo__text p .small {
-  font-size: 70% !important;
+  font-size: 80% !important;
   font-weight: 100 !important;
 }
 .aboutPage .shopList ul li .shopInfo__location {
@@ -1940,8 +1991,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
@@ -2130,8 +2187,14 @@ html {
 .itemSearchBox .itemSearch__field {
   width: 80% !important;
   height: 30px !important;
+  border: none !important;
   padding: 7px !important;
+  box-shadow: none !important;
   background-color: #f5f4f2;
+}
+
+.itemSearchBox .itemSearch__field:focus-visible {
+  outline: none !important;
 }
 
 .itemSearchBox .itemSearch__btn {
