--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,4 +9,4 @@
 @import "content/aboutPage";
 @import "content/contactPage";
 @import "content/membershipPage";
-@import "content/blog";
+@import "content/blogPage";
